Patch from Michael Franz (ticket #4696): sched.h and pthreads to allow setting of the thread priority

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@33783 a95241bf-73f2-0310-859d-f6bbb57e9c96