headers/posix/sched.h
@@ -1,5 +1,5 @@
 /*
- * Copyright 2008, Haiku Inc. All rights reserved.
+ * Copyright 2008-2009, Haiku Inc. All rights reserved.
  * Distributed under the terms of the MIT license.
  */
 #ifndef _SCHED_H_
@@ -9,7 +9,17 @@
 extern "C" {
 #endif
 
+#define SCHED_OTHER 	1
+#define SCHED_RR	2
+#define SCHED_FIFO	4
+
+struct sched_param {
+	int sched_priority;
+};
+
 extern int sched_yield(void);
+extern int sched_get_priority_min(int);
+extern int sched_get_priority_max(int);
 
 #ifdef __cplusplus
 }
